# eventkoordinator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.ci-tools  Makefile  README.md  buildnodeclient.sh  data.puml  debug-docker-compose.sh  debug-quick-setup.sh  debug-runserver.sh  delete-everything-and-restart.sh  docker-compose.debug.yml  docker-compose.yml  index.html  main.py  package-lock.json  package.json  prod-manage.sh  pyproject.toml  run_backend.sh  vite.config.ts
.run/: Build Node Client.run.xml  Django Runserver.run.xml  Docker Compose.run.xml  Postgres only.run.xml  Run Development Servers.run.xml  manage migrate.run.xml
.tmp/: ical_cache.json  openapi_schema.json
alloy/: config.alloy
backend/: auto_settings.py  default_settings.py  ipython_imports.py  manage.py  settings.debug.toml  settings.toml
documentation/: configurable-proposal-form-plan.md  example_policy.rego  kursgebuehren_rechner_marimo(1).py  proposals_policy.rego
nginx/: default.conf.j2
prometheus/: prometheus.yml
src/: App.css  App.tsx  ContentRenderer.module.css  ContentRenderer.tsx  DefaultScreen.module.css  DefaultScreen.tsx  EventEditor.tsx  EventGeneralEditor.module.css  EventGeneralEditor.tsx  EventStatusBadge.module.css  EventStatusBadge.tsx  EventTransitionButtons.module.css  EventTransitionButtons.tsx  ImageUploadField.module.css  ImageUploadField.tsx  IndexView.module.css  IndexView.tsx  MainView.module.css  MainView.tsx  Navbar.module.css  Navbar.tsx  ProposalDashboard.module.css  ProposalDashboard.tsx  ProposalEditor.tsx  (+45 more)
(+326 files in other folders)
